--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,10 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <form action="#" id="send" method="post">
+        <input type="text" name="message" id="message">
+        <input type="submit" name="submit" class="submit">
+      </form> 
     </div>
     <div id="chats"></div>
   </body>
