--- a/client/index.html
+++ b/client/index.html
@@ -17,20 +17,23 @@
         newSearch += 'username=' + (prompt('What is your name?') || 'anonymous');
         window.location.search = newSearch;
       }
+      
     </script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
-    <script src="scripts/app.js"></script>
+    
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <form action="#" id="send" method="post">
-        <input type="text" name="message" id="message">
-        <input type="submit" name="submit" class="submit">
+        <input type="text" name="message" id="message"/>
+        <button type="submit" name="submit" class="submit"></button>
       </form> 
     </div>
     <div id="chats"></div>
+  <script src="scripts/app.js"></script>
+  <!--<script>$(document).ready( function() { app.init(); } ); </script>-->
   </body>
 </html>
