Adding friends and posting things

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,11 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <div id="rooms"> "
+          Room:
+        "
+        <select id="roomSelect"></select>
+      </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
         <button type="submit" name="submit" class="submit"></button>
