--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
-        <button type="submit" name="submit" class="submit"></button>
+        <button type="submit" name="submit" class="submit">Submit</button>
       </form> 
     </div>
     <div id="chats"></div>
