--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
         <button type="submit" name="submit" class="submit">Submit</button>
+        <button type="submit" name="createRoom" class="createRoom">Create Room</button>
       </form> 
     </div>
     <div id="chats"></div>
