--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,14 @@
   </head>
   <body>
     <div id="main">
-      <h1>chatterbox</h1>
+      <h1>chatterbox </h1>
       <!-- Your HTML goes here! -->
+      <script>
+        var startIndex = window.location.search.indexOf('username='); 
+        var username = window.location.search.slice(startIndex + 9, window.location.search.length); 
+        $('h1').append(username);
+      </script> 
+      <div>
       <div id="rooms"> "
           Room:
         "
